@@ -1,11 +1,10 @@
 package config.offset;
 
-import jdk.internal.misc.Unsafe;
+
+import sun.misc.Unsafe;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
-import java.security.AccessController;
-import java.security.PrivilegedExceptionAction;
 import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
@@ -18,14 +17,23 @@ public class OffsetUtil {
 
     static {
         try {
-            unsafe = AccessController.doPrivileged((PrivilegedExceptionAction<Unsafe>) () -> {
-                Field theUnsafe = Unsafe.class.getDeclaredField("theUnsafe");
-                theUnsafe.setAccessible(true);
-                return (Unsafe) theUnsafe.get(null);
-            });
-        } catch (Throwable e) {
-            System.err.println("Unable to load unsafe");
+            // 获取 Unsafe 内部的私有的实例化单例对象
+            Field field = Unsafe.class.getDeclaredField("theUnsafe");
+            // 无视权限
+            field.setAccessible(true);
+            unsafe = (Unsafe) field.get(null);
+        } catch (NoSuchFieldException | IllegalAccessException e) {
+            e.printStackTrace();
         }
+//        try {
+//            unsafe = AccessController.doPrivileged((PrivilegedExceptionAction<Unsafe>) () -> {
+//                Field theUnsafe = Unsafe.class.getDeclaredField("theUnsafe");
+//                theUnsafe.setAccessible(true);
+//                return (Unsafe) theUnsafe.get(null);
+//            });
+//        } catch (Throwable e) {
+//            System.err.println("Unable to load unsafe");
+//        }
     }
 
     public static List<FieldOffset> getClassMemberOffset(Class<?> beanClass) {
